# LeoBuildSystem

./: .gitignore  CMakeLists.txt  Main.cpp  README.md  Sample.xml
LeoProjectCache/: out.dep
ext/tinyxml2/: SOURCE.txt
include/: BuildSystem.hpp  Compilers.hpp  Utils.hpp
src/: BuildSystem.cpp  Compilers.cpp  Utils.cpp
